fix datepicker calendar offscreen position

--- a/less/datepicker.less
+++ b/less/datepicker.less
@@ -15,7 +15,11 @@
         z-index: @zindex-absolute;
 
         &.open {
-            //display: block;
+        }
+
+        &.open-up {
+            top: auto;
+            bottom: 100%;
         }
     }
 }
